добавил новое, исправил косяк в securitySchemes.basic.
убрал ResponseEntity полностью, все равно его возможностями не пользуюсь
